# extradsl

./: .gitignore  LICENSE  README.md  spec.json
docs/examples/: README.md  housing.csv
docs/examples/extract1/: extract1.json  extract1_output.csv
implementations/python/: .gitignore  Dockerfile  docker-compose.yml  requirements.txt  setup.cfg  tox.ini
implementations/python/extradsl/: parser.py
implementations/python/extradsl/io/: local_csv.py
implementations/python/tests/: tests.py
