[metadata]
name = extradsl
version = 2.0.1
description = Extract structured data from a structured data
long_description = file: README.rst
url = http://extradsl.readthedocs.io/en/latest
download_url = https://github.com/wanderijames/extradsl
author = James Wanderi
author_email = wanderikinyanjui@gmail.com
keywords =
    csv
    pandas
    etl
    spark
    mining
    data
license = MIT License
classifiers =
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
install_requires =
    pyarrow==0.17.1
